[project]
name = "worldline"
version = "1.0.0"
description = "Worldline is a unified observability and telemetry bootstrapper for Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "structlog>=24",
    "pydantic-settings>=2",
    "rich>=13",
    "opentelemetry-api>=1",
    "opentelemetry-sdk>=1",
    "opentelemetry-exporter-otlp>=1",
    "colorama>=0",
    "sentry-sdk>=2",
    "posthog>=7",
    "langfuse>=4",
]

[tool.pdm]
save_strategy = "minimum"
update_strategy = "eager"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.force-include]
"worldline.pth" = "worldline.pth"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=1.0.0",
    "mkinit>=1.2.0",
    "ruff>=0.15.16",
    "hypothesis>=6.0.0",
    "pytest-xdist>=3.0.0",
    "pyrefly>=1.1.1",
]

[tool.bumpver]
current_version = "1.0.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit = false
tag = false
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'version = "{version}"',
]
"src/worldline/__init__.py" = [
    '__version__ = "{version}"',
]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
